# web-bundler-bevy-error

backend/: Cargo.toml
frontend/: Cargo.toml
