[package]
name = "frontend"
version = "0.1.0"
authors = ["David Ed Mellum <david@edmellum.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = "0.4.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
